--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,17 @@
   box-sizing: border-box;
 }
 
+*::-webkit-scrollbar {
+  width: 6px;
+  background-color: white;
+}
+
+
+*::-webkit-scrollbar-thumb {
+  background-color: #c2c2c2;
+  border-radius: 40px;
+}
+
 nav{
   width: 100%;
   height: 10vh;
